# popoto_discover

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  build.gradle.kts  requirements.txt  settings.gradle.kts
.github/workflows/: package-installers.yml
PopotoDiscoverMobile/: ContentView.swift  Info.plist  PopotoDiscoverMobileApp.swift
PopotoDiscoverMobile.xcodeproj/: project.pbxproj
PopotoDiscoverMobile.xcodeproj/xcshareddata/xcschemes/: PopotoDiscoverMobile.xcscheme
PopotoDiscoverMobile/Models/: DiscoveryTransportMode.swift  HydrophoneDevice.swift  LogEntry.swift
PopotoDiscoverMobile/Services/: AuthService.swift  DeviceManager.swift  MobileClientSyncService.swift  PortableCoreBridge.swift  UDPService.swift
PopotoDiscoverMobile/Views/: ActivityLogView.swift  DeviceDetailSheet.swift  DeviceListView.swift  SecretKeySetupView.swift
androidApp/: build.gradle.kts
androidApp/src/main/: AndroidManifest.xml
client/: popoto_discover_client.py
client/popoto/popoto/: README.md  pyproject.toml  requirements.txt
client/popoto/popoto/src/: popoto.py
common/: l2_transport.py  protocol.py
docker/kasm/: Dockerfile  README.md  init-popoto-discover.sh  popoto-autostart  popoto-discover-launcher.sh
docs/: ANDROID_SETUP.md  kotlin-client.md
host/: popoto_discover.py  popoto_discover_gui.py
packaging/linux/: AppRun
scripts/: build-shared-core.sh  popoto-discover-kasm
scripts/ci/: import-macos-signing-cert.sh  notarize-macos-dmg.sh
shared-core/: build.gradle.kts
windows/pmmndis/: README.md  build.ps1  install.ps1  ndisprot60.sln
(+105 files in other folders)
